Cleanup of messages that describe the cleaning function to be run or not. Switched to using jtreg @enablePreview.